--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="MN.jfif" alt="Profile Picture">
+					<img class="profile-pic" src="BF.jfif" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Makana Nyaoga</p>
-					<p class="text-title-company">Senior Associate</p>
+					<p class="text-name">Bryce Fort</p>
+					<p class="text-title-company">Partner</p>
 					<p class="text-title-company">Alterra Capital Partners</p>
 				</div>
 				<div class="col">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:mnyaoga@alterracapital.com">
+		<a href="mailto:fortb@alterracapital.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">mnyaoga@alterracapital.com</p>
+						<p class="text-detail">fortb@alterracapital.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+254792651000">
+		<a href="tel:+254205230500">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+254) 792 651000</p>
+						<p class="text-detail">(+254) 205 230500</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
